force-app/main/default/objects/PortalListing__c/PortalListing__c.object-meta.xml
<CustomObject>
    <label>Portal Listing</label>
    <nameField>
        <displayFormat>PortalListing-{0000000}</displayFormat>
        <label>Portal Listing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portal Listings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>