force-app/main/default/objects/PortalListing__c/fields/ExternalPortalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalPortalId__c</fullName>
    <externalId>true</externalId>
    <label>External Portal Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>