force-app/main/default/objects/PortalListing__c/fields/LastUpdate__c.field-meta.xml
<CustomField>
    <fullName>LastUpdate__c</fullName>
    <label>Last Update</label>
    <type>DateTime</type>
</CustomField>