force-app/main/default/objects/PortalListing__c/fields/ListedDate__c.field-meta.xml
<CustomField>
    <fullName>ListedDate__c</fullName>
    <label>Listed Date</label>
    <type>DateTime</type>
</CustomField>