force-app/main/default/objects/PortalListing__c/fields/Listing_hz__c.field-meta.xml
<CustomField>
    <fullName>Listing_hz__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Listing</label>
    <referenceTo>Listing_hz__c</referenceTo>
    <relationshipLabel>Listed on these portals</relationshipLabel>
    <relationshipName>Portal_Listings</relationshipName>
    <type>Lookup</type>
</CustomField>