force-app/main/default/objects/PortalListing__c/fields/Portal__c.field-meta.xml
<CustomField>
    <fullName>Portal__c</fullName>
    <label>Portal</label>
    <referenceTo>Portal__c</referenceTo>
    <relationshipLabel>Listings on this Portal</relationshipLabel>
    <relationshipName>PortalListings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>