force-app/main/default/objects/PortalListing__c/fields/PortalFeed__c.field-meta.xml
<CustomField>
    <fullName>PortalFeed__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PortalFeed</label>
    <referenceTo>PortalFeed__c</referenceTo>
    <relationshipLabel>Portal Listings</relationshipLabel>
    <relationshipName>Portal_Listings</relationshipName>
    <type>Lookup</type>
</CustomField>