force-app/main/default/objects/PortalListing__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portal Listing Response</label>
    <referenceTo>PortalListingResponse__c</referenceTo>
    <relationshipLabel>Portal Listings</relationshipLabel>
    <relationshipName>Portal_Listings</relationshipName>
    <type>Lookup</type>
</CustomField>