force-app/main/default/objects/PortalListing__c/fields/SystemIsActive__c.field-meta.xml
<CustomField>
    <fullName>SystemIsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>