force-app/main/default/objects/PortalListing__c/fields/UnlistedDate__c.field-meta.xml
<CustomField>
    <fullName>UnlistedDate__c</fullName>
    <label>UnlistedDate</label>
    <type>DateTime</type>
</CustomField>