force-app/main/default/objects/PortalListing__c/validationRules/Cannot_activate_an_unlisted_Portal_Listi.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_activate_an_unlisted_Portal_Listi</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        AND(
            ISCHANGED( SystemIsActive__c ),       
            SystemIsActive__c = true                     
        )
 
    ),
    $User.UIThemeDisplayed == &apos;Theme4d&apos;,                        
    $User.UITheme == &apos;Theme4d&apos;,                                  
    NOT( $User.ProfileId  == &apos;System Administrator&apos;) 
)</errorConditionFormula>
    <errorMessage>Cannot activate an unlisted Portal Listing</errorMessage>
</ValidationRule>