force-app/main/default/objects/PortalListing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SystemIsActive__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LastUpdate__c</columns>
    <columns>ListedDate__c</columns>
    <columns>UnlistedDate__c</columns>
    <columns>Portal__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>