force-app/main/default/objects/PortalListing__c/listViews/Listings_inactive_missing_unlisted_date.listView-meta.xml
<ListView>
    <fullName>Listings_inactive_missing_unlisted_date</fullName>
    <columns>NAME</columns>
    <columns>SystemIsActive__c</columns>
    <columns>ListedDate__c</columns>
    <columns>UnlistedDate__c</columns>
    <columns>Listing_hz__c</columns>
    <columns>Portal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SystemIsActive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>UnlistedDate__c</field>
        <operation>equals</operation>
    </filters>
    <label>Listings inactive missing unlisted date</label>
</ListView>